--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "file-type": "^19.1.1",
+    "helmet": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "winston": "^3.13.1"
